--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2024-05-29"
 compatibility_flags = ["nodejs_compat"]
 
 kv_namespaces = [
-  { binding = "settings", id = "KV_NAME" }
+  { binding = "settings", id = "1ea812f8d238412d8eac5daa61afd3e7" }
 ]
