--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,6 @@ compatibility_flags = ["nodejs_compat"]
 kv_namespaces = [
   { binding = "settings", id = "${KV_NAME}" }
 ]
+
+# Add this type field
+type = "javascript"
